--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,1 @@
-body{background-color:pink;border:solid 3px #90ee90}
+body{background-color:#add8e6;border:3px solid #90ee90;-webkit-transition:background-color 1s;transition:background-color 1s}
