--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,5 @@
 body {
-	background-color: red;
+	background-color: lightblue;
 	border: solid 3px lightgreen;
 	transition: background-color 1s;
 }
